Fix: Added login [lab-08]
