# backend/src/docs/swagger.yaml
@@ -610,6 +610,40 @@ paths:
       summary: Update a Account
       tags:
       - Account
+  /accounts/login:
+    post:
+      consumes:
+      - application/json
+      description: login Account by json
+      parameters:
+      - description: Login Account
+        in: body
+        name: Account
+        required: true
+        schema:
+          $ref: '#/definitions/model.AddAccount'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.Account'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/httputil.HTTPError'
+      summary: Login an Account
+      tags:
+      - Account
   /accounts/old:
     post:
       consumes:
